cabal-version:   3.0
name:            unliftio-servant-server
version:         0.1.0.0
synopsis:        Use MonadUnliftIO on servant APIs
description:
  unliftio-servant-server provides convenience functions for running
  servant APIs whose monads have a 'MonadUnliftIO' instance.

category:        Servant, Server
homepage:        https://github.com/bellroy/unliftio-servant-server
bug-reports:     https://github.com/bellroy/unliftio-servant-server/issues
author:          Bellroy Tech Team <haskell@bellroy.com>
maintainer:      Bellroy Tech Team <haskell@bellroy.com>
copyright:       Copyright (C) 2024 Bellroy Pty Ltd
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md
tested-with:     GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.2

source-repository head
  type:     git
  location: https://github.com/bellroy/haskell.git

common opts
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind

common opts-exe
  ghc-options: -threaded

common deps
  build-depends:
    , base            ^>=4.17
    , mtl             ^>=2.2.2
    , servant         ^>=0.20
    , servant-server  ^>=0.20
    , unliftio        >=0.1.0.0 && <0.3.0.0

library
  import:          deps, opts
  hs-source-dirs:  src
  exposed-modules: UnliftIO.Servant.Server
